force-app/main/default/objects/Unit__c/fields/Buidling_ID__c.field-meta.xml
<CustomField>
    <fullName>Buidling_ID__c</fullName>
    <inlineHelpText>Enter the Building ID where the Unit lives</inlineHelpText>
    <label>Building ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>