force-app/main/default/objects/Unit__c/fields/Co_located__c.field-meta.xml
<CustomField>
    <fullName>Co_located__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this section of a unit is classed as co-located with other sections of the unit being allocated to other brands</inlineHelpText>
    <label>Co-located</label>
    <type>Checkbox</type>
</CustomField>