force-app/main/default/objects/Unit__c/fields/Composite__c.field-meta.xml
<CustomField>
    <fullName>Composite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this unit is a composite of smaller units which could be split</inlineHelpText>
    <label>Composite?</label>
    <type>Checkbox</type>
</CustomField>