force-app/main/default/objects/Unit__c/fields/Full_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Unit_ID__c</fullName>
    <formula>Phase_ID__c  &amp;  Suite_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Full Unit ID comprising Phase and Suite No, used to connect with QA(TXT)</inlineHelpText>
    <label>Full Unit ID</label>
    <type>Text</type>
</CustomField>