force-app/main/default/objects/Unit__c/fields/GEA_sq_ft_zero__c.field-meta.xml
<CustomField>
    <fullName>GEA_sq_ft_zero__c</fullName>
    <formula>Size_sq_ft__c</formula>
    <inlineHelpText>The GEA in square feet without decimal places which is used for legal document production</inlineHelpText>
    <label>GEA sq.ft zero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>