force-app/main/default/objects/Unit__c/fields/GIA_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>GIA_sq_ft__c</fullName>
    <formula>Size_GIA__c * 10.7639</formula>
    <inlineHelpText>GIA * 10.7639</inlineHelpText>
    <label>GIA (sq.ft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>