force-app/main/default/objects/Unit__c/fields/Ground_Floor_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Ground_Floor_sq_ft__c</fullName>
    <formula>Size_Ground_Floor__c  * 10.7639</formula>
    <inlineHelpText>Selling Area expressed in square feet</inlineHelpText>
    <label>Ground Floor (sq.ft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>