force-app/main/default/objects/Unit__c/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <label>Location Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>