force-app/main/default/objects/Unit__c/fields/Master_Unit__c.field-meta.xml
<CustomField>
    <fullName>Master_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the ID of the Master or Parent Unit for this sub-unit</inlineHelpText>
    <label>Master Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only composite units can be master units</errorMessage>
        <filterItems>
            <field>Unit__c.Composite__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only composite units can be master units</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Child Units</relationshipLabel>
    <relationshipName>Child_Units</relationshipName>
    <type>Lookup</type>
</CustomField>