force-app/main/default/objects/Unit__c/fields/Mezzanine_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Mezzanine_sq_ft__c</fullName>
    <formula>Size_Mezzanine__c  * 10.7639</formula>
    <inlineHelpText>Size of mezzanine expressed in square feet</inlineHelpText>
    <label>Mezzanine (sq.ft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>