force-app/main/default/objects/Unit__c/fields/MRI_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Unit_ID__c</fullName>
    <description>Populated by a workflow 
Phase_ID__c &amp; Suite_ID__c
which makes up the uniqueness of MRI, and is a unique field</description>
    <externalId>true</externalId>
    <inlineHelpText>Set automatically</inlineHelpText>
    <label>MRI Unit ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>