force-app/main/default/objects/Unit__c/fields/Nearest_Entrance__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Entrance__c</fullName>
    <inlineHelpText>Assign the nearest entrance to the village to this unit</inlineHelpText>
    <label>Nearest Entrance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SV Drop Off Point</fullName>
            </value>
            <value>
                <fullName>SV Underground Car Park</fullName>
            </value>
            <value>
                <fullName>SV Ground Level Car Park</fullName>
            </value>
            <value>
                <fullName>SV Performance Stage</fullName>
            </value>
            <value>
                <fullName>SV Water Garden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>