force-app/main/default/objects/Unit__c/fields/Omit_from_Village_GEA__c.field-meta.xml
<CustomField>
    <fullName>Omit_from_Village_GEA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the GEA of this unit is to be omitted from the Village total GEA. This used when 2 smaller units are combined and the resulting GEA of the new larger unit is greater than the sum of the smaller ones</inlineHelpText>
    <label>Omit from Village GEA</label>
    <type>Checkbox</type>
</CustomField>