force-app/main/default/objects/Unit__c/fields/Phase_ID__c.field-meta.xml
<CustomField>
    <fullName>Phase_ID__c</fullName>
    <inlineHelpText>Enter the corresponding Phase ID</inlineHelpText>
    <label>Phase ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>