force-app/main/default/objects/Unit__c/fields/Proportion__c.field-meta.xml
<CustomField>
    <fullName>Proportion__c</fullName>
    <formula>IF( Village__r.Total_GIA__c  &gt; 0, Size_GIA__c  /   Village__r.Total_GIA__c,  Size_GEA__c  /  Village__r.Total_GEA__c )</formula>
    <inlineHelpText>Proportion of the Village GIA taken up by this units GIA, if no GIA values are available then GEA will be used</inlineHelpText>
    <label>Proportion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>