force-app/main/default/objects/Unit__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <inlineHelpText>Use this field to control the sequence in which the units are to be displayed or printed</inlineHelpText>
    <label>Seq</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>