force-app/main/default/objects/Unit__c/fields/Size_GEA__c.field-meta.xml
<CustomField>
    <fullName>Size_GEA__c</fullName>
    <inlineHelpText>Enter the Gross External Area (GEA) of the unit in square meters</inlineHelpText>
    <label>Size (GEA)</label>
    <precision>13</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>