force-app/main/default/objects/Unit__c/fields/Size_GIA__c.field-meta.xml
<CustomField>
    <fullName>Size_GIA__c</fullName>
    <inlineHelpText>Enter the Gross Internal Area (GIA) in square metres</inlineHelpText>
    <label>Size (GIA)</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>