force-app/main/default/objects/Unit__c/fields/Size_Ground_Floor__c.field-meta.xml
<CustomField>
    <fullName>Size_Ground_Floor__c</fullName>
    <inlineHelpText>Enter the size of the ground floor selling area in sq.m</inlineHelpText>
    <label>Size (Ground Floor)</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>