force-app/main/default/objects/Unit__c/fields/Size_Mezzanine__c.field-meta.xml
<CustomField>
    <fullName>Size_Mezzanine__c</fullName>
    <inlineHelpText>Enter the size of the mezzanine floor in sq.m if this unit has one</inlineHelpText>
    <label>Size (Mezzanine)</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>