force-app/main/default/objects/Unit__c/fields/Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Size_sq_ft__c</fullName>
    <formula>Size_GEA__c  * 10.7639</formula>
    <inlineHelpText>GEA in sq.ft converted @ 1 sqm = 10.7639 sq.ft</inlineHelpText>
    <label>GEA (sq.ft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>