force-app/main/default/objects/Unit__c/fields/Size_Storage__c.field-meta.xml
<CustomField>
    <fullName>Size_Storage__c</fullName>
    <inlineHelpText>Enter the size of the storage area in sq.m if the unit has any</inlineHelpText>
    <label>Size (Storage)</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>