force-app/main/default/objects/Unit__c/fields/Storage_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Storage_sq_ft__c</fullName>
    <formula>Size_Storage__c  * 10.7639</formula>
    <inlineHelpText>Storage Area expressed in sq.ft</inlineHelpText>
    <label>Storage (sq.ft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>