force-app/main/default/objects/Unit__c/fields/Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>Suite_ID__c</fullName>
    <inlineHelpText>Enter the suite ID for this Unit in order to allow the data to be interfaced to a realted system such as MRI</inlineHelpText>
    <label>Suite ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>