force-app/main/default/objects/Unit__c/fields/Unit_Band__c.field-meta.xml
<CustomField>
    <fullName>Unit_Band__c</fullName>
    <formula>IF( Size_GEA__c  &lt; 50, &quot;&lt; 50&quot;,  IF( Size_GEA__c  &lt;= 100, &quot;51-100&quot;,  IF( Size_GEA__c  &lt;= 150, &quot;101-150&quot;,  IF( Size_GEA__c  &lt;= 250, &quot;151-250&quot;,  IF( Size_GEA__c &lt;= 500 , &quot;251-500&quot;,  IF( Size_GEA__c  &lt;= 700, &quot;501-700&quot;, &quot;700+&quot;) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unit band based on the GEA in square metres</inlineHelpText>
    <label>Unit Band</label>
    <type>Text</type>
</CustomField>