force-app/main/default/objects/Unit__c/fields/Unit_Designation__c.field-meta.xml
<CustomField>
    <fullName>Unit_Designation__c</fullName>
    <description>Categorisation of Unit usage.</description>
    <inlineHelpText>Categorisation of Unit usage.</inlineHelpText>
    <label>Unit Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>F&amp;B</fullName>
            </value>
            <value>
                <fullName>Guest Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>