force-app/main/default/objects/Unit__c/fields/Unit_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>Unit_GeoLocation__c</fullName>
    <label>Unit GeoLocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>