force-app/main/default/objects/Unit__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <inlineHelpText>Enter the unit id prefixed by the 2 digit village code, duplicate values are not allowed in this field</inlineHelpText>
    <label>Unit ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>