force-app/main/default/objects/Unit__c/fields/Unit_Image__c.field-meta.xml
<CustomField>
    <fullName>Unit_Image__c</fullName>
    <formula>HYPERLINK(&quot;https://valueretail--dev--c.cs18.content.force.com/servlet/servlet.FileDownload?file=&quot; +  Unit_Image_ID__c, IMAGE(&quot;https://valueretail--dev--c.cs18.content.force.com/servlet/servlet.FileDownload?file=&quot; +  Unit_Image_ID__c  ,  Name, 150, 150 )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click for full size image</inlineHelpText>
    <label>Unit Image</label>
    <type>Text</type>
</CustomField>