force-app/main/default/objects/Unit__c/fields/Unit_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_Image_ID__c</fullName>
    <description>The ID of the image in the document library to display against this unit</description>
    <label>Unit Image ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>