force-app/main/default/objects/Unit__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <description>...</description>
    <inlineHelpText>Select the Village where this unit lives</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>