force-app/main/default/objects/Unit__c/validationRules/Invalid_Master_Sub_Unit_relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Master_Sub_Unit_relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Master_Unit__c  &lt;&gt; &quot;&quot; , Composite__c  = true)</errorConditionFormula>
    <errorDisplayField>Master_Unit__c</errorDisplayField>
    <errorMessage>A composite or master unit cannot have a master unit</errorMessage>
</ValidationRule>