force-app/main/default/objects/Unit__c/listViews/Bicester_Units.listView-meta.xml
<ListView>
    <fullName>Bicester_Units</fullName>
    <columns>NAME</columns>
    <columns>Seq__c</columns>
    <columns>Phase_ID__c</columns>
    <columns>Suite_ID__c</columns>
    <columns>Full_Unit_ID__c</columns>
    <columns>Size_sq_ft__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Omit_from_Village_GEA__c</columns>
    <columns>Size_GEA__c</columns>
    <columns>Proportion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Bicester Units</label>
</ListView>