force-app/main/default/objects/Unit__c/listViews/Kildare_Units.listView-meta.xml
<ListView>
    <fullName>Kildare_Units</fullName>
    <columns>NAME</columns>
    <columns>Phase_ID__c</columns>
    <columns>Unit_ID__c</columns>
    <columns>Size_GEA__c</columns>
    <columns>Size_GIA__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Kildare</value>
    </filters>
    <label>Kildare Units</label>
    <language>en_US</language>
</ListView>