force-app/main/default/objects/Unit__c/listViews/La_Roca_Units.listView-meta.xml
<ListView>
    <fullName>La_Roca_Units</fullName>
    <columns>NAME</columns>
    <columns>Unit_ID__c</columns>
    <columns>Seq__c</columns>
    <columns>Size_sq_ft__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Omit_from_Village_GEA__c</columns>
    <columns>Size_GEA__c</columns>
    <columns>MRI_Unit_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>La Roca</value>
    </filters>
    <label>La Roca Units</label>
    <language>en_US</language>
</ListView>