force-app/main/default/objects/Unit__c/listViews/Maasmechelen_Units.listView-meta.xml
<ListView>
    <fullName>Maasmechelen_Units</fullName>
    <columns>NAME</columns>
    <columns>Seq__c</columns>
    <columns>Unit_ID__c</columns>
    <columns>Phase_ID__c</columns>
    <columns>Suite_ID__c</columns>
    <columns>Size_sq_ft__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Omit_from_Village_GEA__c</columns>
    <columns>Size_GEA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Maasmechelen</value>
    </filters>
    <label>Maasmechelen Units</label>
    <language>en_US</language>
</ListView>